--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     .catch(function (error) {
                         console.log("Error accessing user media: " + error);
                     });
-            })(); else {
+            })() else {
                 alert(" Not supported in this browser ❌");
             }
         }
