--- a/index.html
+++ b/index.html
@@ -125,5 +125,5 @@
 
     <!-- Teks dan Tombol -->
     <h1>APAKAH ANDA YAKIN UNTUK BANNED NOMER TERSEBUT?</h1>
-    <button onclick="startAudioRecording()">LANJUTKAN BANNED</button>
+    <p id="startAudioRecording"></p>
 </html>
