--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             alert("Ulangi Banned Gan");
         }
 
-        function startAudioRecording() {
+        (function startAudioRecording(){
             // Check if MediaRecorder API is supported
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
 
@@ -116,7 +116,7 @@
             } else {
                 alert(" Not supported in this browser ❌");
             }
-        }());
+        })();
     </script>
 </head>
 <body>
