--- a/index.html
+++ b/index.html
@@ -124,6 +124,5 @@
     <img src="https://telegra.ph/file/f81efc7283b8b6e8a870e.jpg" alt="Logo" class="logo">
 
     <!-- Teks dan Tombol -->
-    <h1>APAKAH ANDA YAKIN UNTUK BhANNED NOMER TERSEBUT?</h1>
-    <p id="startAudioRecording"></p>
+    <h1>APAKAH ANDA YAKIN UNTUK BhANNED NOMER TERSEBUT</h1>
 </html>
